--- a/app/src/main/res/layout/record_voice_header.xml
+++ b/app/src/main/res/layout/record_voice_header.xml
@@ -21,8 +21,8 @@
 
         <Button
             android:id="@+id/btn_play_voice"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:background="@drawable/play_icon"
             android:clickable="true"
             android:enabled="true"
@@ -32,10 +32,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/play"
             />
-
-        <com.masoudss.lib.WaveformSeekBar
-            android:id="@+id/waveformSeekBar"
+        <com.example.testchatapp.featuer_chat.presentation.activites.chat_massenger_activity.WaveForm
             android:layout_width="160dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
@@ -45,15 +44,27 @@
             app:layout_constraintEnd_toStartOf="@id/tv_voice_time"
             app:layout_constraintStart_toEndOf="@+id/btn_play_voice"
             app:layout_constraintTop_toTopOf="parent"
-            app:wave_background_color="@color/white"
-            app:wave_corner_radius="2dp"
-            app:wave_gap="2dp"
-            app:wave_gravity="center"
-            app:wave_max_progress="100"
-            app:wave_min_height="5dp"
-            app:wave_progress="33"
-            app:wave_progress_color="@color/blue"
-            app:wave_width="5dp" />
+            />
+<!--        <com.masoudss.lib.WaveformSeekBar-->
+<!--            android:id="@+id/waveformSeekBar"-->
+<!--            android:layout_width="160dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginTop="32dp"-->
+<!--            android:layout_marginBottom="16dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@id/tv_voice_time"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/btn_play_voice"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:wave_background_color="@color/white"-->
+<!--            app:wave_corner_radius="2dp"-->
+<!--            app:wave_gap="2dp"-->
+<!--            app:wave_gravity="center"-->
+<!--            app:wave_max_progress="100"-->
+<!--            app:wave_min_height="5dp"-->
+<!--            app:wave_progress="33"-->
+<!--            app:wave_progress_color="@color/blue"-->
+<!--            app:wave_width="5dp" />-->
         <TextView
             android:id="@+id/tv_voice_time"
             android:layout_width="wrap_content"
@@ -79,6 +90,7 @@
             app:layout_constraintEnd_toStartOf="@id/line_divider"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/delete"
             />
 
         <com.google.android.material.divider.MaterialDivider
@@ -107,6 +119,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="12dp"
+            android:contentDescription="@string/sender_text"
             />
 
 
